<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biodata"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editNama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/nama"
            android:padding="8dp"
            android:layout_margin="16dp"/>

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:layout_margin="16dp"
            android:entries="@array/jenis_kelamin"/>

        <EditText
            android:id="@+id/editUmur"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/umur"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/email"
            android:padding="8dp"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/editTelp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/telp"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/radius_alamat"
            android:hint="@string/alamat"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button"
            android:text="@string/simpan"
            android:textColor="@color/colorWhite"
            android:layout_margin="16dp"/>

    </LinearLayout>

</ScrollView>